test/trivial/bradc/redefinevar.good
Error: redefinition of symbol x (previous definition at redefinevar.chpl:1) (redefinevar.chpl:2)

