test/trivial/bradc/redefinevar.chpl
var x: integer = 3;
var x: integer = 5;

writeln("x is: ", x);
